<resources>
    <string name="app_name">Tutorial05</string>
    <string name="userName">User Name</string>
    <string name="userNameInput">"Name "</string>
    <string name="password">Password</string>
    <string name="passInput">Password</string>
    <string name="sellectAllBtn">Sellect All</string>
    <string name="addBtn">ADD</string>
    <string name="signinBtn">SIGN IN</string>
    <string name="deleteBtn">DELETE</string>
    <string name="updateBtn">UPDATE</string>
</resources>
